<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <include layout="@layout/title_airhack"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1.0"
                android:id="@+id/list_interface"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_refresh"
                android:textStyle="bold"
                android:id="@+id/refresh_interface"/>
        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/> <!-- Margin for spacing -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            android:layout_weight="1.0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attack_mode_title"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/attack_modes"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/border"
                    android:id="@+id/param_layout"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attack_parameter_title"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/attack_parameter"
                        android:padding="8dp"
                        android:orientation="vertical"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alpha="0.5"
        android:orientation="vertical">
        <TextView
            android:id="@+id/output_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:singleLine="true"
            android:scrollHorizontally="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/now_command"
            android:textSize="12sp"
            android:singleLine="true"
            android:scrollHorizontally="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:gravity="bottom|end"
        android:orientation="vertical">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_scan_ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/mini_fab_desc"
            app:srcCompat="@drawable/baseline_wifi"
            app:fabCustomSize="42dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/mini_fab_desc"
            app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/fab"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>